--- a/projects-graphic.html
+++ b/projects-graphic.html
@@ -9,6 +9,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    * {
+      user-select: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+    }
     .category-header {
       display: flex;
       align-items: center;
@@ -252,6 +257,16 @@
             <span class="project-tag" style="background:#e3f0ff;color:#2d6cdf;font-weight:600;border-radius:999px;padding:0.07em 0.55em;font-size:0.72em;">Adobe Illustrator</span>
             <span class="project-tag" style="background:#e3f0ff;color:#2d6cdf;font-weight:600;border-radius:999px;padding:0.07em 0.55em;font-size:0.72em;">Logo</span>
             <span class="project-tag" style="background:#e3f0ff;color:#2d6cdf;font-weight:600;border-radius:999px;padding:0.07em 0.55em;font-size:0.72em;">AI</span>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="project-title">Brochures</div>
+          <div class="project-date">2024-06-10</div>
+          <div class="project-desc">Creative and informative brochures designed for events, businesses, and promotions.</div>
+          <div style="margin-top:0.5em;display:flex;gap:0.4em;flex-wrap:wrap;">
+            <span class="project-tag" style="background:#e3f0ff;color:#2d6cdf;font-weight:600;border-radius:999px;padding:0.07em 0.55em;font-size:0.72em;">Adobe Photoshop</span>
+            <span class="project-tag" style="background:#e3f0ff;color:#2d6cdf;font-weight:600;border-radius:999px;padding:0.07em 0.55em;font-size:0.72em;">Canva</span>
+            <span class="project-tag" style="background:#e3f0ff;color:#2d6cdf;font-weight:600;border-radius:999px;padding:0.07em 0.55em;font-size:0.72em;">Branding</span>
           </div>
         </div>
       </div>
