--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio | Home</title>
+  <link rel="icon" type="image/png" href="images/person.png" />
   <link rel="stylesheet" href="styles/main.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 <style>
+    * {
+      user-select: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+    }
     .nav-logo {
       position: relative;
       display: flex;
@@ -53,6 +59,28 @@
     .nav-logo:hover {
       background: rgba(255, 255, 255, 0.55);
       box-shadow: 0 8px 32px rgba(0,0,0,0.18);
+    }
+    .resume-btn {
+      display: inline-block;
+      margin-top: 1.2rem;
+      padding: 0.7rem 2.2rem;
+      background: linear-gradient(90deg, #ff6ec4 0%, #7873f5 100%);
+      color: #fff;
+      font-weight: 700;
+      font-size: 1.08rem;
+      border: none;
+      border-radius: 999px;
+      box-shadow: 0 4px 24px rgba(0,0,0,0.10);
+      cursor: pointer;
+      text-decoration: none;
+      transition: background 0.2s, box-shadow 0.2s, transform 0.2s;
+    }
+    .resume-btn:hover {
+      background: linear-gradient(90deg, #7873f5 0%, #ff6ec4 100%);
+      box-shadow: 0 8px 32px rgba(0,0,0,0.18);
+      transform: translateY(-2px) scale(1.04);
+      color: #fff;
+      text-decoration: none;
     }
   </style>
 </head>
@@ -105,6 +133,7 @@
             <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0C5.37 0 0 5.373 0 12c0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.726-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.09-.745.083-.729.083-.729 1.205.085 1.84 1.237 1.84 1.237 1.07 1.834 2.807 1.304 3.492.997.108-.775.418-1.305.762-1.605-2.665-.305-5.466-1.334-5.466-5.931 0-1.31.468-2.381 1.236-3.221-.124-.303-.535-1.523.117-3.176 0 0 1.008-.322 3.3 1.23.957-.266 1.984-.399 3.003-.404 1.018.005 2.046.138 3.006.404 2.289-1.552 3.295-1.23 3.295-1.23.653 1.653.242 2.873.119 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.803 5.624-5.475 5.921.43.371.823 1.102.823 2.222 0 1.606-.014 2.898-.014 3.293 0 .321.218.694.825.576C20.565 21.796 24 17.299 24 12c0-6.627-5.373-12-12-12z"/></svg>
           </a>
         </div>
+        <a href="https://drive.google.com/file/d/1ofUIV2JP5xFDYEWadYMPuCWZx7IFzdAv/view?usp=drive_link" class="resume-btn" target="_blank">Resume</a>
       </div>
     </section>
 
