--- a/projects-web.html
+++ b/projects-web.html
@@ -9,6 +9,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    * {
+      user-select: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+    }
     html {
       scroll-behavior: smooth;
     }
@@ -150,11 +155,56 @@
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
+    .nav-logo {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(255, 255, 255, 0.35);
+      border-radius: 16px;
+      padding: 8px 16px;
+      box-shadow: 0 4px 24px rgba(0,0,0,0.10);
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
+      transition: box-shadow 0.3s, background 0.3s;
+      overflow: hidden;
+    }
+    .nav-logo::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 120px;
+      height: 120px;
+      transform: translate(-50%, -50%);
+      z-index: 0;
+      border-radius: 50%;
+      filter: blur(32px);
+      opacity: 0.7;
+      background: linear-gradient(270deg, #ff6ec4, #7873f5, #42e695, #ff6ec4);
+      background-size: 400% 400%;
+      animation: gradientMove 6s ease-in-out infinite;
+      pointer-events: none;
+    }
+    @keyframes gradientMove {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+    .nav-logo img {
+      display: block;
+      position: relative;
+      z-index: 1;
+    }
+    .nav-logo:hover {
+      background: rgba(255, 255, 255, 0.55);
+      box-shadow: 0 8px 32px rgba(0,0,0,0.18);
+    }
   </style>
 </head>
 <body>
   <nav class="navbar">
-    <div class="nav-logo">MyPortfolio</div>
+    <div class="nav-logo"><img src="images/signature.png" alt="Signature" style="height:40px;"></div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="skills.html">Skills</a></li>
