--- a/index.html
+++ b/index.html
@@ -10,10 +10,192 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 <style>
-    * {
+    html, body {
+      width: 100vw;
+      height: 100vh;
+      min-height: 100vh;
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden;
+      background: radial-gradient(ellipse at 60% 40%, #f3e7ff 0%, #e3e6ff 60%, #f7f7fa 100%) !important;
+    }
+    .hero, main, section, .tiles-grid, .recent-projects {
+      background: transparent !important;
+      box-shadow: none !important;
+    }
+    main {
+      padding-top: 0 !important;
+      margin-top: 0 !important;
+    }
+    .hero {
+      margin-top: 0 !important;
+      padding-top: 0 !important;
+    }
+        * {
       user-select: none;
       -webkit-user-select: none;
       -ms-user-select: none;
+    }
+    /* HERO SECTION REDESIGN */
+    .hero {
+      position: relative;
+      min-height: 70vh;
+      width: 100vw;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      z-index: 1;
+      box-sizing: border-box;
+      /* background removed to unify with body */
+      animation: heroFadeIn 1.2s cubic-bezier(.23,1.01,.32,1) 0.1s both;
+    }
+    @keyframes heroFadeIn {
+      from { opacity: 0; transform: translateY(40px) scale(0.98); }
+      to { opacity: 1; transform: none; }
+    }
+    .hero-inner {
+      position: relative;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      gap: 3.5rem;
+      z-index: 1;
+      width: 100%;
+      max-width: 1100px;
+      min-height: 420px;
+      padding: 0 2rem;
+      box-sizing: border-box;
+      background: none;
+    }
+    .hero-content {
+      color: #2a254d;
+      max-width: 540px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+      gap: 0.7rem;
+      animation: fadeInUp 1.2s cubic-bezier(.23,1.01,.32,1) 0.2s both;
+    }
+    .hero-title {
+      font-size: 3.2rem;
+      font-weight: 800;
+      margin-bottom: 0.5rem;
+      letter-spacing: -1.5px;
+      animation: slideInLeft 1.1s cubic-bezier(.23,1.01,.32,1) 0.1s both;
+      color: #2a254d;
+      text-shadow: 0 2px 12px rgba(120,115,245,0.08);
+    }
+    .bio {
+      font-size: 1.18rem;
+      margin-bottom: 1.1rem;
+      font-weight: 400;
+      line-height: 1.6;
+      animation: fadeInUp 1.3s cubic-bezier(.23,1.01,.32,1) 0.4s both;
+      text-align: left;
+      color: #3d375a;
+    }
+    .social-icons {
+      display: flex;
+      gap: 1.1rem;
+      margin-bottom: 1.1rem;
+      animation: fadeInUp 1.4s cubic-bezier(.23,1.01,.32,1) 0.6s both;
+    }
+    .social-icons .icon {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 44px;
+      height: 44px;
+      border-radius: 50%;
+      background: #f3e7ff;
+      color: #7873f5;
+      font-size: 1.3rem;
+      box-shadow: 0 2px 8px rgba(120,115,245,0.08);
+      transition: background 0.2s, color 0.2s, transform 0.2s, box-shadow 0.2s;
+      border: 2px solid #e3e6ff;
+    }
+    .social-icons .icon:hover {
+      background: #7873f5;
+      color: #fff;
+      transform: translateY(-3px) scale(1.08);
+      box-shadow: 0 6px 24px rgba(120,115,245,0.18);
+      border-color: #ff6ec4;
+    }
+    .hero-img-col {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex: 1 1 0;
+      min-width: 220px;
+      min-height: 220px;
+    }
+    .hero-img-bg {
+      position: relative;
+      width: 210px;
+      height: 210px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(135deg, #ff6ec4 0%, #7873f5 100%);
+      border-radius: 50%;
+      box-shadow: 0 8px 32px rgba(120,115,245,0.13), 0 2px 8px rgba(0,0,0,0.08);
+      animation: floatImg 4s ease-in-out infinite alternate;
+    }
+    .hero-img {
+      width: 170px;
+      height: 170px;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 6px solid #fff;
+      box-shadow: 0 4px 24px rgba(120,115,245,0.10);
+      background: #fff;
+      transition: transform 0.3s;
+      margin: 0;
+      display: block;
+      flex-shrink: 0;
+      position: relative;
+      z-index: 2;
+    }
+    .hero-img:hover {
+      transform: scale(1.06) rotate(-2deg);
+    }
+    @keyframes floatImg {
+      0% { transform: translateY(0) scale(1); }
+      100% { transform: translateY(-18px) scale(1.04); }
+    }
+    @media (max-width: 900px) {
+      .hero-inner {
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+        gap: 2.5rem;
+        min-height: 0;
+        padding: 2rem 0.5rem 1.5rem 0.5rem;
+      }
+      .hero-content {
+        align-items: center;
+        text-align: center;
+      }
+      .bio { text-align: left; }
+    }
+    @media (max-width: 600px) {
+      .hero-inner { padding: 2rem 0.5rem 1.5rem 0.5rem; gap: 1.2rem; }
+      .hero-img-bg { width: 180px; height: 180px; }
+      .hero-img { width: 130px; height: 130px; }
+      .hero-title { font-size: 2rem; }
+      .bio { font-size: 1.05rem; }
+    }
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: none; }
+    }
+    @keyframes slideInLeft {
+      from { opacity: 0; transform: translateX(-40px); }
+      to { opacity: 1; transform: none; }
     }
     .nav-logo {
       position: relative;
@@ -115,25 +297,31 @@
 
   <main>
     <section class="hero">
-      <img src="images/person.png" alt="Profile" class="hero-img" />
-      <div class="hero-content">
-        <h1>Hello, I'm Aman Kumar</h1>
-        <p class="bio">A passionate designer & developer crafting modern digital experiences. I specialize in graphic design, UI/UX, web, and game development.</p>
-        <div class="social-icons">
-          <a href="#" class="icon linkedin" title="LinkedIn" target="_blank">
-            <svg width="24" height="24" fill="currentColor"><path d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11 19h-3v-9h3v9zm-1.5-10.28c-.97 0-1.75-.79-1.75-1.75s.78-1.75 1.75-1.75 1.75.79 1.75 1.75-.78 1.75-1.75 1.75zm13.5 10.28h-3v-4.5c0-1.08-.02-2.47-1.5-2.47-1.5 0-1.73 1.17-1.73 2.39v4.58h-3v-9h2.89v1.23h.04c.4-.75 1.38-1.54 2.84-1.54 3.04 0 3.6 2 3.6 4.59v4.72z"/></svg>
-          </a>
-          <a href="#" class="icon instagram" title="Instagram" target="_blank">
-            <svg width="24" height="24" fill="currentColor"><path d="M12 2.2c3.2 0 3.584.012 4.85.07 1.17.056 1.97.24 2.43.41.59.22 1.01.48 1.45.92.44.44.7.86.92 1.45.17.46.354 1.26.41 2.43.058 1.266.07 1.65.07 4.85s-.012 3.584-.07 4.85c-.056 1.17-.24 1.97-.41 2.43-.22.59-.48 1.01-.92 1.45-.44.44-.86.7-1.45.92-.46.17-1.26.354-2.43.41-1.266.058-1.65.07-4.85.07s-3.584-.012-4.85-.07c-1.17-.056-1.97-.24-2.43-.41-.59-.22-1.01-.48-1.45-.92-.44-.44-.7-.86-.92-1.45-.17-.46-.354-1.26-.41-2.43-.058-1.266-.07-1.65-.07-4.85s.012-3.584.07-4.85c.056-1.17.24-1.97.41-2.43.22-.59.48-1.01.92-1.45.44-.44.86-.7 1.45-.92.46-.17 1.26-.354 2.43-.41 1.266-.058 1.65-.07 4.85-.07zm0-2.2c-3.259 0-3.667.012-4.947.07-1.276.058-2.147.24-2.89.51-.8.29-1.48.68-2.15 1.35-.67.67-1.06 1.35-1.35 2.15-.27.74-.452 1.614-.51 2.89-.058 1.28-.07 1.688-.07 4.947s.012 3.667.07 4.947c.058 1.276.24 2.147.51 2.89.29.8.68 1.48 1.35 2.15.67.67 1.35 1.06 2.15 1.35.74.27 1.614.452 2.89.51 1.28.058 1.688.07 4.947.07s3.667-.012 4.947-.07c1.276-.058 2.147-.24 2.89-.51.8-.29 1.48-.68 2.15-1.35.67-.67 1.06-1.35 1.35-2.15.27-.74.452-1.614.51-2.89.058-1.28.07-1.688.07-4.947s-.012-3.667-.07-4.947c-.058-1.276-.24-2.147-.51-2.89-.29-.8-.68-1.48-1.35-2.15-.67-.67-1.35-1.06-2.15-1.35-.74-.27-1.614-.452-2.89-.51-1.28-.058-1.688-.07-4.947-.07z"/><circle cx="12" cy="12" r="3.2"/><circle cx="18.4" cy="5.6" r="1.44"/></svg>
-          </a>
-          <a href="mailto:your.email@gmail.com" class="icon gmail" title="Gmail" target="_blank">
-            <svg width="24" height="24" fill="currentColor"><path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 2v.01L12 13 4 6.01V6h16zM4 20v-9.99l7.99 7.99c.39.39 1.02.39 1.41 0L20 10.01V20H4z"/></svg>
-          </a>
-          <a href="https://github.com/amankuamr" class="icon github" title="GitHub" target="_blank">
-            <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0C5.37 0 0 5.373 0 12c0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.726-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.09-.745.083-.729.083-.729 1.205.085 1.84 1.237 1.84 1.237 1.07 1.834 2.807 1.304 3.492.997.108-.775.418-1.305.762-1.605-2.665-.305-5.466-1.334-5.466-5.931 0-1.31.468-2.381 1.236-3.221-.124-.303-.535-1.523.117-3.176 0 0 1.008-.322 3.3 1.23.957-.266 1.984-.399 3.003-.404 1.018.005 2.046.138 3.006.404 2.289-1.552 3.295-1.23 3.295-1.23.653 1.653.242 2.873.119 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.803 5.624-5.475 5.921.43.371.823 1.102.823 2.222 0 1.606-.014 2.898-.014 3.293 0 .321.218.694.825.576C20.565 21.796 24 17.299 24 12c0-6.627-5.373-12-12-12z"/></svg>
-          </a>
+      <div class="hero-inner">
+        <div class="hero-content">
+          <h1 class="hero-title">Hello, I'm Aman Kumar</h1>
+          <p class="bio">A passionate designer & developer crafting modern digital experiences. I specialize in graphic design, UI/UX, web, and game development.</p>
+          <div class="social-icons">
+            <a href="#" class="icon linkedin" title="LinkedIn" target="_blank">
+              <svg width="24" height="24" fill="currentColor"><path d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11 19h-3v-9h3v9zm-1.5-10.28c-.97 0-1.75-.79-1.75-1.75s.78-1.75 1.75-1.75 1.75.79 1.75 1.75-.78 1.75-1.75 1.75zm13.5 10.28h-3v-4.5c0-1.08-.02-2.47-1.5-2.47-1.5 0-1.73 1.17-1.73 2.39v4.58h-3v-9h2.89v1.23h.04c.4-.75 1.38-1.54 2.84-1.54 3.04 0 3.6 2 3.6 4.59v4.72z"/></svg>
+            </a>
+            <a href="#" class="icon instagram" title="Instagram" target="_blank">
+              <svg width="24" height="24" fill="currentColor"><path d="M12 2.2c3.2 0 3.584.012 4.85.07 1.17.056 1.97.24 2.43.41.59.22 1.01.48 1.45.92.44.44.7.86.92 1.45.17.46.354 1.26.41 2.43.058 1.266.07 1.65.07 4.85s-.012 3.584-.07 4.85c-.056 1.17-.24 1.97-.41 2.43-.22.59-.48 1.01-.92 1.45-.44.44-.86.7-1.45.92-.46.17-1.26.354-2.43.41-1.266.058-1.65.07-4.85.07zm0-2.2c-3.259 0-3.667.012-4.947.07-1.276.058-2.147.24-2.89.51-.8.29-1.48.68-2.15 1.35-.67.67-1.06 1.35-1.35 2.15-.27.74-.452 1.614-.51 2.89-.058 1.28-.07 1.688-.07 4.947s.012 3.667.07 4.947c.058 1.276.24 2.147.51 2.89.29.8.68 1.48 1.35 2.15.67.67 1.35 1.06 2.15 1.35.74.27 1.614.452 2.89.51 1.28.058 1.688.07 4.947.07s3.667-.012 4.947-.07c1.276-.058 2.147-.24 2.89-.51.8-.29 1.48-.68 2.15-1.35.67-.67 1.06-1.35 1.35-2.15.27-.74.452-1.614.51-2.89.058-1.28.07-1.688.07-4.947s-.012-3.667-.07-4.947c-.058-1.276-.24-2.147-.51-2.89-.29-.8-.68-1.48-1.35-2.15-.67-.67-1.35-1.06-2.15-1.35-.74-.27-1.614-.452-2.89-.51-1.28-.058-1.688-.07-4.947-.07z"/><circle cx="12" cy="12" r="3.2"/><circle cx="18.4" cy="5.6" r="1.44"/></svg>
+            </a>
+            <a href="mailto:your.email@gmail.com" class="icon gmail" title="Gmail" target="_blank">
+              <svg width="24" height="24" fill="currentColor"><path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 2v.01L12 13 4 6.01V6h16zM4 20v-9.99l7.99 7.99c.39.39 1.02.39 1.41 0L20 10.01V20H4z"/></svg>
+            </a>
+            <a href="https://github.com/amankuamr" class="icon github" title="GitHub" target="_blank">
+              <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0C5.37 0 0 5.373 0 12c0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.726-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.09-.745.083-.729.083-.729 1.205.085 1.84 1.237 1.84 1.237 1.07 1.834 2.807 1.304 3.492.997.108-.775.418-1.305.762-1.605-2.665-.305-5.466-1.334-5.466-5.931 0-1.31.468-2.381 1.236-3.221-.124-.303-.535-1.523.117-3.176 0 0 1.008-.322 3.3 1.23.957-.266 1.984-.399 3.003-.404 1.018.005 2.046.138 3.006.404 2.289-1.552 3.295-1.23 3.295-1.23.653 1.653.242 2.873.119 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.803 5.624-5.475 5.921.43.371.823 1.102.823 2.222 0 1.606-.014 2.898-.014 3.293 0 .321.218.694.825.576C20.565 21.796 24 17.299 24 12c0-6.627-5.373-12-12-12z"/></svg>
+            </a>
+          </div>
+          <a href="https://drive.google.com/file/d/1ofUIV2JP5xFDYEWadYMPuCWZx7IFzdAv/view?usp=drive_link" class="resume-btn" target="_blank">Resume</a>
         </div>
-        <a href="https://drive.google.com/file/d/1ofUIV2JP5xFDYEWadYMPuCWZx7IFzdAv/view?usp=drive_link" class="resume-btn" target="_blank">Resume</a>
+        <div class="hero-img-col">
+          <div class="hero-img-bg">
+            <img src="images/person.png" alt="Profile" class="hero-img" />
+          </div>
+        </div>
       </div>
     </section>
 
