--- a/projects-web.html
+++ b/projects-web.html
@@ -9,6 +9,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    html, body {
+      width: 100vw;
+      min-height: 100vh;
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden;
+      background: radial-gradient(ellipse at 60% 40%, #f3e7ff 0%, #e3e6ff 60%, #f7f7fa 100%) !important;
+    }
     * {
       user-select: none;
       -webkit-user-select: none;
